@@ -383,6 +383,9 @@ BUGFIXES:
   ZOOKEEPER-2484: Flaky Test: org.apache.zookeeper.test.LoadFromLogTest.testLoadFailure
   (Michael Han via phunt)
 
+  ZOOKEEPER-2576: After svn to git migration ZooKeeper Precommit jenkins job is failing
+  (Patrick Hunt via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
